[feat] 기본적인 의존성 설정